# dj-blog

./: .gitignore  .gitlab-ci.yml  README.md  article_data.json  conftest.py  misc.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
blog/: admin.py  feeds.py  forms.py  models.py  search.py  sitemaps.py  urls.py  views.py
blog/fixtures/: article_data.json  users_data.json
blog/migrations/: 0001_initial.py  0002_remove_comment_status.py  0003_rename_publish_comment_created_at_and_more.py
blog/tests/: test_article.py
core/: settings.py  urls.py  wsgi.py
core/settings/: __init__.py  base.py  dev.py  prod.py
deploy/: start_gunicorn
dj-blog/: AGENTS.md  generated_users.json  misc.py  requirements.txt
dj-blog/.github/workflows/: django.yml
dj-blog/blog/: forms.py  models.py  sitemaps.py  urls.py  utils.py  views.py
dj-blog/blog/fixtures/: category_data.json
dj-blog/blog/templatetags/: blog_extras.py
dj-blog/blog/tests/: factories.py  fixtures.py  test_article.py  test_db_fixtures.py
dj-blog/core/: urls.py  wsgi.py
dj-blog/core/settings/: base.py  dev.py  prod.py
dj-blog/templates/: base.html  footer.html  index.html  navbar.html  robots.txt
dj-blog/templates/approval/: draft_detail.html  draft_list.html
dj-blog/templates/blog/: addComment.html  addarticle.html  (+10 more)
dj-blog/users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
media/index/: MAIN_3n4fq4r4xc3z41s3.seg  MAIN_49zujssn2h4ixmoj.seg  MAIN_718oeiusoaheodet.seg  MAIN_7v4bnp5475ii5zp8.seg  MAIN_admtr7jmpdjl818a.seg  MAIN_ckevb76evjfd7j4m.seg  MAIN_jjlh7zj209c9180k.seg  MAIN_lpi0n7i0byungykr.seg  MAIN_qnu3z25uvi8fhw9n.seg  MAIN_raqgm7q0uba7eulb.seg  MAIN_sgxqhuzmhs0s0pp5.seg  MAIN_u9867fvelv0eh4w2.seg  _MAIN_249.toc  _MAIN_288.toc  _MAIN_435.toc
templates/: base.html  navbar.html  script.html
templates/blog/: addCategory.html  addarticle.html  article_delete.html  articles.html  category.html  dashboard.html  detail.html  search.html  update.html
templates/registration/: login.html
theme/static_src/: package-lock.json
users/: views.py
users/migrations/: 0001_initial.py
(+6 files in other folders)
